--- a/.gitignore
+++ b/.gitignore
@@ -223,7 +223,7 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-.env
+.env.development
 .env.development.local
 .env.test.local
 .env.production.local
