get Customers done

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,11 @@
 
 # AWS User-specific
 .idea/**/aws.xml
-
+.env
+.env.development
+.env.test
+.env.*
+.env
 # Generated files
 .idea/**/contentModel.xml
 
@@ -341,3 +345,4 @@ $RECYCLE.BIN/
 /dist/
 /.env.development
 /.env.test
+!/.env
