--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "build:digitalocean": "npm install --production=false && npm run build && npm ci",
-    "dev": "concurrently \"tsc -w\" \"dotenv -e .env.development node --watch dist/server.js\"",
+    "dev": "concurrently \"tsc -w\" \"dotenv -e .env.development nodemon dist/server.js\"",
     "start": "node ./dist/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.5.2",
+    "@prisma/client": "^5.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "dotenv-cli": "^7.3.0",
@@ -30,6 +30,7 @@
     "concurrently": "^8.2.1",
     "jest": "^29.7.0",
     "jest-ts-webcompat-resolver": "^1.0.0",
+    "nodemon": "^3.0.1",
     "prisma": "^5.5.2",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
