--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
      "noImplicitThis": true,
      "alwaysStrict": true,
      "noUnusedLocals": true,
-     "noUnusedParameters": true,
+     "noUnusedParameters": false,
      "noImplicitReturns": true,
      "noFallthroughCasesInSwitch": true,
      "noImplicitOverride": true,
