--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,12 @@
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
-
+.idea\dataSources.xml
+.idea
+.idea\**
+.idea\*
+.idea/**
+.idea/*
 # AWS User-specific
 .idea/**/aws.xml
 .env
