--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc",
     "build:digitalocean": "npm install --production=false && npm run build && npm ci",
     "dev": "concurrently \"tsc -w\" \"dotenv -e .env.development nodemon dist/server.js\"",
-    "start": "node ./dist/server.js"
+    "migrate": "dotenv -e .env.development prisma migrate dev --name init",
+    "start": "dotenv -e .env.development node ./dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -31,7 +32,7 @@
     "jest": "^29.7.0",
     "jest-ts-webcompat-resolver": "^1.0.0",
     "nodemon": "^3.0.1",
-    "prisma": "^5.5.2",
+    "prisma": "^5.6.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
