--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "build:digitalocean": "npm install --production=false && npm run build && npm ci",
-    "dev": "concurrently \"tsc -w\" \"dotenv -e .env.development nodemon dist/server.js\"",
+    "dev": "concurrently \"tsc -w\" \"dotenv -e .env.development node dist/server.js\"",
     "migrate": "dotenv -e .env.development prisma migrate dev --name init",
     "start": "dotenv -e .env.development node ./dist/server.js"
   },
