--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "tsc",
+        "build": "prisma generate && tsc",
         "build:digitalocean": "npm install --production=false && npm run build && npm ci",
         "dev": "concurrently \"tsc -w\" \"dotenv -e .env.development nodemon dist/server.js\"",
         "migrate": "dotenv -e .env.development prisma migrate dev --name init",
@@ -20,7 +20,8 @@
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "dotenv-cli": "^7.3.0",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "express-validator": "^7.0.1"
     },
     "devDependencies": {
         "@types/cors": "^2.8.15",
