--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
         /*Emit*/
         "outDir":"./dist",
         "removeComments":true,
-        "noEmitOnError":true,
+        /*"noEmitOnError":true,*/
         "esModuleInterop":true,
         "forceConsistentCasingInFileNames":true,
 
