--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "dotenv": "^16.3.1",
         "dotenv-cli": "^7.3.0",
         "express": "^4.18.2",
-        "express-validator": "^7.0.1"
+        "express-validator": "^7.0.1",
+        "node-fetch": "^3.3.2"
     },
     "devDependencies": {
         "@types/cors": "^2.8.15",
